fix alignment for varying screen sizes, initial settings added

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -10,20 +10,48 @@ html, body {
 	background: radial-gradient(#444, #333);
 }
 
+#top {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+#temps {
+	float: right;
+}
+
 #target-temp {
+	pointer-events: none;
+	opacity: 0.7;
 	width: 150px;
 	height: 150px;
-	margin-top: 20px;
-	margin-right: 5px;
-	pointer-events: none;
+	float: right;
+	margin-bottom: 20px;
+	margin-left: 20px;
 }
 
 #current-temp {
+	pointer-events: none;
+	opacity: 0.7;
 	width: 150px;
 	height: 150px;
-	margin-top: 20px;
-	margin-right: 20px;
-	pointer-events: none;
+	float: right;
+}
+
+#settings {
+	opacity: 0.7;
+	margin-bottom: 20px;
+	margin-right: 5px;
+	max-width: 350px;
+	width: 100%;
+	float: left;
+}
+
+@media all and (max-width: 715px) {
+	#temps {
+		float: left;
+		position: absolute;
+		bottom: 0;
+	}
 }
 
 .valign {
